--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "dva": "^2.1.0",
+    "koa": "^2.4.1",
+    "koa-router": "^7.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
